--- a/VMX/2020/NavXWithPixyFollow/build.gradle
+++ b/VMX/2020/NavXWithPixyFollow/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2020.3.2"
+    id "com.kauailabs.first.GradleRIO" version "2020.3.2.2"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -12,7 +12,7 @@ def ROBOT_MAIN_CLASS = "frc.robot.Main"
 // This is added by GradleRIO's backing project EmbeddedTools.
 deploy {
     targets {
-        roboRIO("roborio") {
+        vmxpi("roborio") {
             // Team number is loaded either from the .wpilib/wpilib_preferences.json
             // or from command line. If not found an exception will be thrown.
             // You can use getTeamOrDefault(team) instead of getTeamNumber if you
@@ -37,6 +37,10 @@ deploy {
     }
 }
 
+
+repositories {
+   maven { url 'https://nexus.otake.pw/repository/maven-public/' }
+}
 // Set this to true to enable desktop support.
 def includeDesktopSupport = false
 
@@ -44,13 +48,14 @@ def includeDesktopSupport = false
 // Also defines JUnit 4.
 dependencies {
     implementation wpi.deps.wpilib()
-    nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
+    nativeZip wpi.deps.wpilibJni(wpi.platforms.raspbian)
     nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
 
 
     implementation wpi.deps.vendor.java()
-    nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
+    nativeZip wpi.deps.vendor.jni(wpi.platforms.raspbian)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
+    implementation 'pw.otake.pseudoresonance:pixy2-java-api:1.4.1'
 
     testImplementation 'junit:junit:4.12'
 
