Cleaned code up a bit

--- a/VMX/2020/Pixy/.vscode/settings.json
+++ b/VMX/2020/Pixy/.vscode/settings.json
@@ -12,5 +12,6 @@
     "**/.settings": true,
     "**/.factorypath": true,
     "**/*~": true
-  }
+  },
+  "java.checkstyle.configuration": "/google_checks.xml"
 }
