--- a/VMX/2020/Pixy/build.gradle
+++ b/VMX/2020/Pixy/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "com.kauailabs.first.GradleRIO" version "2020.3.2.1"
+    id "com.kauailabs.first.GradleRIO" version "2020.3.2.1" //Do not forget to update to the latest VMX version
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -36,7 +36,7 @@ deploy {
         }
     }
 }
-
+//This whole block needs to be added to run the Pseudoresonance library.
 repositories {
    maven { url 'https://nexus.otake.pw/repository/maven-public/' }
 }
@@ -55,6 +55,7 @@ dependencies {
     implementation wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.raspbian)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
+    //This is the other line that needs to be added to access the Pseudoresonance library.s
     implementation 'pw.otake.pseudoresonance:pixy2-java-api:1.4.1'
 
     testImplementation 'junit:junit:4.12'
